Update CSS image location. Update version property.

--- a/less/app.less
+++ b/less/app.less
@@ -1699,8 +1699,8 @@ i.c-checkbox.fg-checkbox {
                   float: left;
                   width: 35px;
                   height: 35px;
-                  -webkit-mask: url('/images/ic_host.svg');
-                  mask: url('/images/ic_host.svg');
+                  -webkit-mask: url('/SCP/images/ic_host.svg');
+                  mask: url('/SCP/images/ic_host.svg');
                   background-color: #fff;
                 }
               }
@@ -1731,16 +1731,16 @@ i.c-checkbox.fg-checkbox {
                       height: 20px;
                       background-color: var(--primaryTextColor);
                       &.mac {
-                        -webkit-mask: url('/images/ic_mac_address.svg');
-                        mask: url('/images/ic_mac_address.svg');
+                        -webkit-mask: url('/SCP/images/ic_mac_address.svg');
+                        mask: url('/SCP/images/ic_mac_address.svg');
                       }
                       &.windows {
-                        -webkit-mask: url('/images/ic_windows.svg');
-                        mask: url('/images/ic_windows.svg');
+                        -webkit-mask: url('/SCP/images/ic_windows.svg');
+                        mask: url('/SCP/images/ic_windows.svg');
                       }
                       &.linux {
-                        -webkit-mask: url('/images/ic_linux.svg');
-                        mask: url('/images/ic_linux.svg');
+                        -webkit-mask: url('/SCP/images/ic_linux.svg');
+                        mask: url('/SCP/images/ic_linux.svg');
                       }
                     }
                     i.fg,
