--- a/less/app.less
+++ b/less/app.less
@@ -2515,7 +2515,6 @@ i.c-checkbox.fg-checkbox {
           }
         }
         .main-table {
-
           tbody tr {
             height: 45px;
           }
@@ -2717,6 +2716,12 @@ i.c-checkbox.fg-checkbox {
               }
               &.ipPort {
                 img {
+                  float: left;
+                  margin-right: 5px;
+                }
+              }
+              &._menu {
+                .toggle-btn {
                   float: left;
                   margin-right: 5px;
                 }
