--- a/less/modal.less
+++ b/less/modal.less
@@ -1733,3 +1733,13 @@ html[data-theme='dark'] {
     }
   }
 }
+#importEsIndexDialog-content {
+  width: 310px;
+  max-height: 350px;
+  .fg-close,
+  .fg-add {
+    width: 30px;
+    height: 36px;
+    margin-top: 2px;
+  }
+}
