Remove import-index file. Fix bug for File Integration retrigger.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1728,11 +1728,9 @@ html[data-theme='dark'] {
 }
 #importEsIndexDialog-content {
   width: 310px;
-  max-height: 350px;
-  .fg-close,
-  .fg-add {
-    width: 30px;
-    height: 36px;
-    margin-top: 2px;
+  padding: 15px;
+  .header {
+    color: var(--primaryContentHeader);
+    margin-bottom: 5px;
   }
 }
