Minor Host bug fixes and dark style updates for Combo box.

--- a/less/app.less
+++ b/less/app.less
@@ -202,10 +202,14 @@ button {
     border-color: var(--primaryContentHeader);
   }
 }
+.c-combo-list .list-item:hover {
+  color: var(--primaryTextColor);
+  background-color: var(--tabMenuHover);
+}
 .c-popover,
 .pure-form legend {
-  color: var(--primaryTextColor);
-  background-color: var(--primaryContentBackground);
+  color: var(--primaryTextColor) !important;
+  background-color: var(--primaryContentBackground) !important;
 }
 .c-tree {
   ul li:last-child:before {
