Restyle the Host Assessment page layout.

--- a/less/app.less
+++ b/less/app.less
@@ -1707,20 +1707,18 @@ i.c-checkbox.fg-checkbox {
               }
               .info {
                 float: left;
-                & > header:first-child  {
-                  color: var(--formEmailGroup);
-                  font-size: 1.2em;
-                  font-weight: bold;
-                  margin-bottom: 5px;
-                }
                 ul {
-                  margin-bottom: 10px;
+                  margin-bottom: 5px;
                   li {
                     display: inline-block;
-                    color: var(--primaryTextColor);
-                    margin-right: 10px;
-                    padding-left: 10px;
+                    font-size: 17px;
+                    font-weight: bold;
+                    margin-right: 6px;
+                    padding-left: 5px;
                     border-left: 1px solid #d8d8d8;
+                    span {
+                      color: var(--formEmailGroup);
+                    }
                     &.first {
                       padding-left: 0;
                       border: none;
@@ -1728,20 +1726,20 @@ i.c-checkbox.fg-checkbox {
                     .fg-bg {
                       float: left;
                       margin-right: 3px;
-                      width: 20px;
-                      height: 20px;
+                      width: 22px;
+                      height: 22px;
                       background-color: var(--primaryTextColor);
                       &.mac {
-                        -webkit-mask: url('/SCP/images/ic_mac_address.svg');
-                        mask: url('/SCP/images/ic_mac_address.svg');
+                        -webkit-mask: url('/images/ic_mac_address.svg');
+                        mask: url('/images/ic_mac_address.svg');
                       }
                       &.windows {
-                        -webkit-mask: url('/SCP/images/ic_windows.svg');
-                        mask: url('/SCP/images/ic_windows.svg');
+                        -webkit-mask: url('/images/ic_windows.svg');
+                        mask: url('/images/ic_windows.svg');
                       }
                       &.linux {
-                        -webkit-mask: url('/SCP/images/ic_linux.svg');
-                        mask: url('/SCP/images/ic_linux.svg');
+                        -webkit-mask: url('/images/ic_linux.svg');
+                        mask: url('/images/ic_linux.svg');
                       }
                     }
                     i.fg,
@@ -1750,37 +1748,26 @@ i.c-checkbox.fg-checkbox {
                       margin-right: 3px;
                     }
                     i.fg {
-                      font-size: 20px;
+                      font-size: 22px;
                     }
                     img {
                       width: 20px;
                     }
                   }
                 }
-                .sub-item {
-                  margin-top: 15px;
-                  clear: both;
-                  header {
-                    float: left;
-                    color: var(--primaryTextColor);
-                    font-size: 15px;
-                    font-weight: bold;
-                    margin-right: 10px;
-                  }
-                  .flex-item {
-                    display: flex;
-                    flex-wrap: wrap;
-                    width: 100%;
-                    margin: 2px 0;
-                    span {
-                      color: #fff;
-                      font-size: 14px;
-                      padding: 5px 10px;
-                      margin-top: 5px;
-                      margin-right: 10px;
-                      border-radius: 5px;
-                      background-color: var(--primaryContentHeader);                      
-                    }
+                .flex-item {
+                  display: flex;
+                  flex-wrap: wrap;
+                  width: 100%;
+                  margin: 2px 0;
+                  span {
+                    color: #fff;
+                    font-size: .9em;
+                    padding: 5px 10px;
+                    margin-top: 5px;
+                    margin-right: 7px;
+                    border-radius: 5px;
+                    background-color: #999;                      
                   }
                 }
               }
