--- a/less/modal.less
+++ b/less/modal.less
@@ -857,7 +857,7 @@ html[data-theme='dark'] {
     border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     & > .nav {
-      width: 280px;
+      min-width: 280px;
       border-right: 1px solid var(--primaryBorder);
       ul li {
         overflow: hidden;
