Try the table functionality for Material UI.

--- a/less/app.less
+++ b/less/app.less
@@ -1730,16 +1730,16 @@ i.c-checkbox.fg-checkbox {
                       height: 22px;
                       background-color: var(--primaryTextColor);
                       &.mac {
-                        -webkit-mask: url('/SCP/images/ic_mac_address.svg');
-                        mask: url('/SCP/images/ic_mac_address.svg');
+                        -webkit-mask: url('/images/ic_mac_address.svg');
+                        mask: url('/images/ic_mac_address.svg');
                       }
                       &.windows {
-                        -webkit-mask: url('/SCP/images/ic_windows.svg');
-                        mask: url('/SCP/images/ic_windows.svg');
+                        -webkit-mask: url('/images/ic_windows.svg');
+                        mask: url('/images/ic_windows.svg');
                       }
                       &.linux {
-                        -webkit-mask: url('/SCP/images/ic_linux.svg');
-                        mask: url('/SCP/images/ic_linux.svg');
+                        -webkit-mask: url('/images/ic_linux.svg');
+                        mask: url('/images/ic_linux.svg');
                       }
                     }
                     i.fg,
