Update display icons for Host Assessment.

--- a/less/app.less
+++ b/less/app.less
@@ -1729,6 +1729,10 @@ i.c-checkbox.fg-checkbox {
                       width: 22px;
                       height: 22px;
                       background-color: var(--primaryTextColor);
+                      &.ip {
+                        -webkit-mask: url('/SCP/images/ic_ip_private.svg');
+                        mask: url('/SCP/images/ic_ip_private.svg');
+                      }
                       &.mac {
                         -webkit-mask: url('/SCP/images/ic_mac_address.svg');
                         mask: url('/SCP/images/ic_mac_address.svg');
@@ -1740,6 +1744,10 @@ i.c-checkbox.fg-checkbox {
                       &.linux {
                         -webkit-mask: url('/SCP/images/ic_linux.svg');
                         mask: url('/SCP/images/ic_linux.svg');
+                      }
+                      &.hmd {
+                        -webkit-mask: url('/SCP/images/ic_net_hmd.svg');
+                        mask: url('/SCP/images/ic_net_hmd.svg');
                       }
                     }
                     i.fg,
