Continue try out the MUI Datatable for SCP.

--- a/less/app.less
+++ b/less/app.less
@@ -921,6 +921,10 @@ i.c-checkbox.fg-checkbox {
           cursor: not-allowed;
         }
       }
+      .c-toggle-btn {
+        float: left;
+        margin-right: 5px
+      }
     }
   }
   .table-cell {
