Add 'add to settings' funcitonality for HMD Process Monitor.

--- a/less/modal.less
+++ b/less/modal.less
@@ -617,6 +617,10 @@ html[data-theme='dark'] {
                 width: 80%;
                 text-align: left;
                 margin-top: 1px;
+                .fg-add {
+                  float: right;
+                  margin-right: 0;
+                }
               }
               .scan-type {
                 color: #b1b1b1;
