--- a/less/modal.less
+++ b/less/modal.less
@@ -491,8 +491,10 @@ html[data-theme='dark'] {
 }
 /* configuration/topology/inventory */
 /* configuration/common/alert-details */
+/* host/index */
 #dashboardModalDialog-content,
-#configScanModalDialog-content {
+#configScanModalDialog-content,
+#hostModalDialog-content, {
   #g-progress-container {
     .fg-loading-2 {
       display: block;
@@ -530,16 +532,16 @@ html[data-theme='dark'] {
         .refresh {
           position: absolute;
           top: 15px;
-          left: -5px;
+          left: 0;
         }
         .last-update {
           float: right;
           margin-top: 5px;
+          margin-right: 10px;
         }
         .btn {
           float: right;
           padding: .3em .5em;
-          margin-left: 10px;
         }
       }
       .table {
@@ -615,6 +617,10 @@ html[data-theme='dark'] {
                 width: 80%;
                 text-align: left;
                 margin-top: 1px;
+                .fg-add {
+                  float: right;
+                  margin-right: 0;
+                }
               }
               .scan-type {
                 color: #b1b1b1;
@@ -623,7 +629,7 @@ html[data-theme='dark'] {
             .rule {
               padding: 5px 45px;
               border-top: 1px solid var(--primaryBorder);
-              .rule-content {
+              .item-content {
                 margin-bottom: 2px;
                 .header,
                 .tree-content {
@@ -662,11 +668,15 @@ html[data-theme='dark'] {
                     display: none;
                   }
                   ul {
-                    padding: 10px;
                     width: 20%;
+                    padding: 10px;
                     li span {
                       color: var(--primaryContentHeader);
                     }
+                    &.no-padding {
+                      width: 100%;
+                      padding: 0;
+                    } 
                   }
                 }
                 i.fg {
@@ -702,61 +712,79 @@ html[data-theme='dark'] {
       }
       .settings {
         position: relative;
-        .settings-wrapper {
-          overflow-y: auto;
+        overflow: hidden;
+        .btn {
+          padding: .3em .5em;
         }
-        .options-btn {
-          float: right;
-          margin-top: 10px;
-          margin-right: 10px;
-          .btn {
-            padding: .3em .5em;
-          }
-          .restore-default,
+        & > button,
+        .edit-btns {
+          position: absolute;
+          top: 15px;
+        }
+        .edit,
+        .edit-btns {
+          right: 10px;
+        }
+        .edit-btns {
+          .cancel,
           .save,
-          .cancel {
+          .restore-default {
             float: right;
           }
-          .restore-default,
-          .save {
+          .save,
+          .restore-default {
             margin-right: 5px;
           }
         }
-        .toggle-btn {
-          position: absolute;
-          top: 65px;
-          left: 135px;
-          label {
-            display: inherit;
+        .settings-wrapper {
+          margin-top: 60px;
+          overflow-y: auto;
+          header {
+            float: left;
+            padding-left: 10px;
           }
-        }
-        .settings-form {
-          margin: 0 10px;
-          .form-group {
-            margin-bottom: 20px;
-            label {
-              display: block;
-              text-align: left;
-              font-size: .9em;
-              color: var(--primaryContentHeader);
-              margin-bottom: 3px;
+          .settings-group {
+            position: relative;
+            border-top: 2px solid var(--primaryBorder);
+            .info {
+              position: absolute;
+              top: 0;
+              right: 10px;
             }
-            .flex-item {
-              margin-top: 10px;
-              span {
-                font-size: 14px;
-                color: #fff;
-                padding: 5px 10px;
-                margin: 3px 2px;
-                border-radius: 5px;
-                background-color: var(--primaryContentHeader);
+          }
+          .settings-form {
+            margin: 0 10px;
+            clear: both;
+            .form-group {
+              margin-bottom: 10px;
+              label {
+                display: block;
+                text-align: left;
+                font-size: .9em;
+                color: var(--primaryContentHeader);
+                margin-bottom: 3px;
+              }
+              .path-item {
+                .item {
+                  display: inline-block;
+                  margin-top: 8px;
+                  margin-bottom: 15px;
+                }
+                .block {
+                  display: block;
+                }
+                span {
+                  font-size: 14px;
+                  color: #fff;
+                  padding: 5px 10px;
+                  margin: 3px 2px;
+                  border-radius: 5px;
+                  background-color: var(--primaryContentHeader);
+                }
               }
             }
-          }
-          .path-group {
-            margin-bottom: 20px;
-            .path-input {
-              width: 255px;
+            .path-group {
+              margin-bottom: 20px;
               .error {
                 border-color: #da364a;
               }
@@ -768,7 +796,9 @@ html[data-theme='dark'] {
   }
 }
 /* common/alert-details */
-#dashboardModalDialog-content {
+/* host/index */
+#dashboardModalDialog-content,
+#hostModalDialog-content {
   width: 1280px;
   max-height: 725px;
   .main-table {
@@ -794,7 +824,7 @@ html[data-theme='dark'] {
         width: 10%;
       }
     }
-    .severity {
+    .severity-level .severity {
       display: block;
       color: #fff;
       width: 90px;
@@ -831,7 +861,7 @@ html[data-theme='dark'] {
     border: 1px solid var(--primaryBorder);
     border-radius: 5px;
     & > .nav {
-      width: 280px;
+      min-width: 280px;
       border-right: 1px solid var(--primaryBorder);
       ul li {
         overflow: hidden;
@@ -1033,7 +1063,40 @@ html[data-theme='dark'] {
         }
       }
       .settings-wrapper {
-        height: 340px;
+        height: 330px;
+      }
+    }
+  }
+}
+#hostModalDialog-content {
+  .main-content {
+    & > .content {
+      height: 550px;
+      .srcIp-content,
+      .scan-info,
+      & > .network-behavior {
+        height: 525px;
+      }
+    }
+  }
+  .scan-info .info-content {
+    .dashboard-wrapper {
+      height: 100%;
+    }
+    .table {
+      max-height: 440px;
+    }
+    .settings-wrapper {
+      height: 430px;
+      .settings-form {
+        .path-group {
+          .path-input {
+            width: 900px;
+            &.short {
+              width: 197px;
+            }
+          }
+        }
       }
     }
   }
@@ -1063,8 +1126,18 @@ html[data-theme='dark'] {
         }
       }
       .settings-wrapper {
-        height: 455px;
-      }      
+        height: 445px;
+        .settings-form {
+          .path-group {
+            .path-input {
+              width: 1130px;
+              &.short {
+                width: 255px;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -1656,4 +1729,8 @@ html[data-theme='dark'] {
       font-size: 26px;
     }
   }
+}
+#importEsIndexDialog-content {
+  width: 310px;
+  padding: 15px;
 }
