Work on the Form using Material UI for SCP.

--- a/less/app.less
+++ b/less/app.less
@@ -1268,7 +1268,6 @@ i.c-checkbox.fg-checkbox {
       }
       label {
         display: block;
-        //margin: 15px 0 3px 0;
         &.first-label {
           margin-top: 0;
         }
@@ -1548,7 +1547,7 @@ i.c-checkbox.fg-checkbox {
                 display: block;
                 font-size: 15px;
                 color: var(--primaryContentHeader);
-                margin-bottom: 3px;
+                margin-bottom: 5px;
               }
               input {
                 width: 185px;
@@ -1840,7 +1839,7 @@ i.c-checkbox.fg-checkbox {
             justify-content: left;
             text-align: center;
             width: 70%;
-            padding: 10px 10px 15px 10px;
+            padding: 10px;
             margin: 0 auto;
             margin-top: 70px;
             margin-bottom: 40px;
@@ -2028,6 +2027,7 @@ i.c-checkbox.fg-checkbox {
             & > .group {
               position: relative;
               width: 50%;
+              margin: 5px 0;
               padding: 5px;
               text-align: left;
               &.full {
