--- a/less/modal.less
+++ b/less/modal.less
@@ -1271,6 +1271,7 @@ html[data-theme='dark'] {
     &.add-floor {
       text-align: left;
       font-weight: normal;
+      padding-top: 15px;
     }
     .fg {
       color: var(--primaryTextColor);
