--- a/less/modal.less
+++ b/less/modal.less
@@ -1485,7 +1485,7 @@ html[data-theme='dark'] {
 }
 #irSelectionDialog-content {
   width: 450px;
-  #irComboList {
+  .ir-comboList {
     margin: 10px 0 20px 0;
   }
   .c-checkbox-group {
