--- a/less/modal.less
+++ b/less/modal.less
@@ -1535,20 +1535,23 @@ html[data-theme='dark'] {
     margin: 10px 0;
     .filter-section {
       float: left;
+      width: 600px;
       margin-right: 10px;
-      select {
-        width: auto;
+      margin-top: 10px;
+      .search-type {
+        float: left;
+        width: 30%;
+        margin-right: 10px;
       }
-      input {
-        width: 250px;
-        height: 36px;
+      .search-keyword {
+        float: left;
+        width: 67%;
       }
     }
     .button-group {
-      margin-top: 0;
+      margin-top: 15px;
       button {
         min-width: auto;
-        margin-top: 3px;
       }
     }
   }
