Complete the basic form conversion to Material UI.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1488,8 +1488,14 @@ html[data-theme='dark'] {
   .ir-comboList {
     margin: 10px 0 20px 0;
   }
-  .c-checkbox-group {
+  .ir-selections {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     height: 270px;
+    .checkbox-ui {
+      padding: 0px 5px 5px 15px;
+    }
   }
 }
 #editPatternName-content {
