--- a/less/app.less
+++ b/less/app.less
@@ -592,6 +592,10 @@ i.c-checkbox.fg-checkbox {
   }
 }
 #app-container {
+  .checkbox-ui,
+  .radio-ui {
+    padding: 0px 5px 5px 5px;
+  }
   .sub-header { //The blue bar
     position: relative;
     color: #fff;
@@ -1209,11 +1213,14 @@ i.c-checkbox.fg-checkbox {
           text-align: center;
           margin-top: 50px;
         }
-        .c-checkbox-group {
+        .checkbox-group {
           width: 100%;
           padding: 10px 5px;
           border-radius: 5px;
           background-color: var(--leftTreeGroup);
+          .nav-box {
+            padding: 2px 5px 5px 10px;
+          }
         }
         .list-item {
           i.c-checkbox {
@@ -1221,9 +1228,7 @@ i.c-checkbox.fg-checkbox {
           }
         }
         .fg-recode {
-          float: left;
           font-size: 1em;
-          margin-top: 3px;
           margin-right: 3px;
           &.emergency {
             color: #CC2943;
@@ -1418,6 +1423,9 @@ i.c-checkbox.fg-checkbox {
           float: right;
         }
       }
+      .activate-time {
+        flex-direction: row;
+      }
     }
     .parent-content {
       flex-grow: 1;
@@ -1570,24 +1578,17 @@ i.c-checkbox.fg-checkbox {
           margin-top: 40px;
           &.config {
             .group {
-              min-width: 185px;
+              width: 185px;
               padding: 5px;
               label {
                 display: block;
                 font-size: 15px;
                 color: var(--primaryContentHeader);
-                margin-bottom: 5px;
-              }
-              input {
-                width: 185px;
-              }
-              select {
-                width: auto;
-                min-width: 185px;
               }
               &.last {
                 width: 100%;
                 margin-top: 10px;
+                margin-left: 5px;
                 label {
                   float: left;
                   margin-top: 1px;
@@ -1601,6 +1602,7 @@ i.c-checkbox.fg-checkbox {
               &.group-checkbox {
                 position: relative;
                 display: flex;
+                width: auto;
                 padding: 10px;
                 margin: 0 5px 5px 5px;
                 border: 1px solid var(--primaryBorder);
@@ -1611,12 +1613,10 @@ i.c-checkbox.fg-checkbox {
                 }
                 .group-options {
                   display: flex;
+                  margin: 5px 0 -5px 10px;
                   .option {
                     margin-right: 10px;
                     label {
-                      float: left;
-                      margin-top: 1px;
-                      margin-right: 5px;
                       &.active {
                         color: var(--primaryContentHeader);
                       }
@@ -1638,10 +1638,11 @@ i.c-checkbox.fg-checkbox {
                 }
               }
             }
-            .severity label {
-              color: var(--primaryContentHeader);
-              display: block;
-              margin: 4px 0 2px 5px;
+            .severity {
+              margin-top: 4px;
+              .group-options {
+                margin: 5px 0px -10px 10px;
+              }
             }
           }
         }
@@ -1877,13 +1878,13 @@ i.c-checkbox.fg-checkbox {
             }
             #autoSettingsAD {
               position: absolute;
-              top: -45px;
+              top: -50px;
               left: 80px;
-              flex-direction: row;
             }
             .radio-group {
               flex-direction: row;
               margin: 10px 0;
+              margin-left: 5px;
             }
             &.normal {
               .list-item {
@@ -1930,9 +1931,8 @@ i.c-checkbox.fg-checkbox {
               }
               .owner-type {
                 position: absolute;
-                top: -48px;
+                top: -50px;
                 left: 100px;
-                flex-direction: row;
                 .list-item {
                   margin: 0;
                   margin-right: 15px;
@@ -3132,7 +3132,6 @@ i.c-checkbox.fg-checkbox {
   .dialog {
     width: 500px;
     min-height: 500px;
-    
     .c-checkbox-group {
       padding: 15px;
     }
