Work on the form validation for new Material UI forms.

--- a/less/app.less
+++ b/less/app.less
@@ -196,9 +196,6 @@ button {
     border: none !important;
   }
 }
-.fg-close {
-  height: 40px;
-}
 .c-tabs > .menu {
   border-bottom: 1.5px solid var(--leftNavBackground);
   background-color: var(--primaryContentBackground);
@@ -657,6 +654,7 @@ i.c-checkbox.fg-checkbox {
       }
       .search-type {
         float: left;
+        height: 35px;
         margin-right: 10px;
       }
       .search-interval {
@@ -668,6 +666,9 @@ i.c-checkbox.fg-checkbox {
         }
         .update-interval {
           margin-right: 10px;
+        }
+        .select-field {
+          height: 35px;
         }
       }
       .datepicker {
