--- a/less/app.less
+++ b/less/app.less
@@ -1485,6 +1485,10 @@ i.c-checkbox.fg-checkbox {
               width: 200px;
               height: 35px;
             }
+            .fg-close,
+            .fg-add {
+              height: 40px;
+            }
             .fg-recode {
               float: left;
               width: 32px;
@@ -1918,7 +1922,6 @@ i.c-checkbox.fg-checkbox {
                 label {
                   display: inline-block;
                   margin-right: 5px;
-                  margin-top: 15px;
                 }
                 i {
                   position: absolute;
@@ -1964,6 +1967,7 @@ i.c-checkbox.fg-checkbox {
                   height: 200px;
                   border-radius: 50%;
                   margin-top: 10px;
+                  margin-bottom: 10px;
                 }
               }
             }
