Add conditional dialog for ES Management page. Convert login and resetPwd pages to Material UI form. Various bugs fix.

--- a/less/login.less
+++ b/less/login.less
@@ -57,20 +57,12 @@ html[data-theme='dark'] {
     &, input, button {
       border-radius: 5px;
     }
-    #username {
-      margin-bottom: 15px;
-    }
-    #password {
-      margin-bottom: 35px;
-    }
-    input {
-      width: 100%;
-      margin-top: 7px;
-      height: 40px;
-    }
     button {
       width: 100%;
       padding: 8px 43px;
+    }
+    .login-group {
+      margin-bottom: 25px;
     }
     .first-time {
       font-size: 15px;
@@ -80,7 +72,7 @@ html[data-theme='dark'] {
       cursor: pointer;
     }
     .error-msg {
-      min-height: 30px;
+      min-height: 20px;
     }
   }
   #g-footer {
