--- a/less/modal.less
+++ b/less/modal.less
@@ -1749,3 +1749,9 @@ html[data-theme='dark'] {
   width: 310px;
   padding: 15px;
 }
+#resetPasswordDialog-content {
+  min-width: 300px;
+  .form-input {
+    margin: 15px 5px;
+  }
+}
