--- a/less/app.less
+++ b/less/app.less
@@ -2553,7 +2553,7 @@ i.c-checkbox.fg-checkbox {
             height: 78vh;
             overflow-y: auto;
             padding: 20px 100px;
-            background-color: #fff;
+            background-color: var(--primaryContentBackground);
             header {
               margin-bottom: 15px;
             }
