Revert back the src image url for CSS.

--- a/less/app.less
+++ b/less/app.less
@@ -1804,16 +1804,16 @@ i.c-checkbox.fg-checkbox {
                         mask: url('/SCP/images/ic_ip_private.svg');
                       }
                       &.mac {
-                        -webkit-mask: url('/images/ic_mac_address.svg');
-                        mask: url('/images/ic_mac_address.svg');
+                        -webkit-mask: url('/SCP/images/ic_mac_address.svg');
+                        mask: url('/SCP/images/ic_mac_address.svg');
                       }
                       &.windows {
-                        -webkit-mask: url('/images/ic_windows.svg');
-                        mask: url('/images/ic_windows.svg');
+                        -webkit-mask: url('/SCP/images/ic_windows.svg');
+                        mask: url('/SCP/images/ic_windows.svg');
                       }
                       &.linux {
-                        -webkit-mask: url('/images/ic_linux.svg');
-                        mask: url('/images/ic_linux.svg');
+                        -webkit-mask: url('/SCP/images/ic_linux.svg');
+                        mask: url('/SCP/images/ic_linux.svg');
                       }
                       &.hmd {
                         -webkit-mask: url('/SCP/images/ic_net_hmd.svg');
